--- a/pymol_scripts/selections.yml
+++ b/pymol_scripts/selections.yml
@@ -1,6 +1,9 @@
-structures:
-  - 2gk6
-  - 2xzo
-selections:
-  chainA: 1-602 
-  
+Upf1: 
+    structures:
+      - 2gk6
+      - 2xzo
+    selections:
+      chainA: 1-602
+
+
+      
